--- a/package.json
+++ b/package.json
@@ -1,5 +1,29 @@
 {
   "dependencies": {
-    "5to6": "^0.0.3"
-  }
+    "5to6": "^0.0.3",
+    "lodash": "^4.17.21"
+  },
+  "name": "wordle-fork",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {
+    "webpack": "^5.68.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.3"
+  },
+  "scripts": {
+    "build": "webpack",
+    "dev": "webpack serve"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/samhenrigold/wordle-fork.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/samhenrigold/wordle-fork/issues"
+  },
+  "homepage": "https://github.com/samhenrigold/wordle-fork#readme",
+  "description": ""
 }
